✨ Operations resource
