# app/models/squeeze/income.rb
@@ -6,5 +6,14 @@ module Squeeze
     belongs_to :budget
     belongs_to :category
     belongs_to :account
+    has_one :operation, as: :operable, dependent: :destroy
+
+    after_save :store_operation!
+
+    # Store income operation callback
+    def store_operation!
+      operation_attrs = { account: account, amount: amount.abs }
+      operation.nil? ? create_operation(operation_attrs) : operation.update(operation_attrs)
+    end
   end
 end
