# app/models/squeeze/user.rb
@@ -11,6 +11,8 @@ module Squeeze
     has_many :categories, through: :budgets
     has_many :incomes, through: :budgets
     has_many :expenses, through: :budgets
+    has_many :incomes, through: :budgets
+    has_many :operations, through: :accounts
 
     accepts_nested_attributes_for :profile
   end
