# public/squeeze-openapi.v1.json
@@ -1181,6 +1181,16 @@
                 }
               }
             }
+          },
+          "404": {
+            "description": "Not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GeneralError"
+                }
+              }
+            }
           }
         },
         "operationId": "get-v1-budget-categories",
@@ -1605,6 +1615,16 @@
           },
           "401": {
             "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GeneralError"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not found",
             "content": {
               "application/json": {
                 "schema": {
@@ -2043,6 +2063,16 @@
                 }
               }
             }
+          },
+          "404": {
+            "description": "Not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GeneralError"
+                }
+              }
+            }
           }
         },
         "operationId": "get-v1-budget-expenses",
@@ -2421,6 +2451,92 @@
         ],
         "tags": [
           "Expenses"
+        ]
+      }
+    },
+    "/v1/accounts/{account_id}/operations": {
+      "parameters": [
+        {
+          "name": "account_id",
+          "in": "path",
+          "schema": {
+            "type": "integer"
+          },
+          "required": true
+        }
+      ],
+      "get": {
+        "summary": "User account operations search",
+        "tags": [
+          "Operations"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "$ref": "#/components/schemas/Operation"
+                      }
+                    },
+                    "meta": {
+                      "$ref": "#/components/schemas/Metadata"
+                    }
+                  },
+                  "required": [
+                    "data"
+                  ]
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GeneralError"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GeneralError"
+                }
+              }
+            }
+          }
+        },
+        "operationId": "get-v1-account-operations",
+        "parameters": [
+          {
+            "schema": {
+              "type": "number"
+            },
+            "in": "query",
+            "name": "page"
+          },
+          {
+            "schema": {
+              "type": "number"
+            },
+            "in": "query",
+            "name": "per_page"
+          }
+        ],
+        "security": [
+          {
+            "Authentication token": []
+          }
         ]
       }
     }
@@ -2844,6 +2960,50 @@
           "amount"
         ]
       },
+      "Operation": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "number"
+          },
+          "uuid": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "amount": {
+            "type": "number"
+          },
+          "created_at": {
+            "type": "string"
+          },
+          "updated_at": {
+            "type": "string"
+          },
+          "account": {
+            "$ref": "#/components/schemas/Account"
+          },
+          "operable": {
+            "type": "object",
+            "oneOf": [
+              {
+                "$ref": "#/components/schemas/Income"
+              },
+              {
+                "$ref": "#/components/schemas/Expense"
+              }
+            ]
+          }
+        },
+        "required": [
+          "id",
+          "uuid",
+          "amount",
+          "created_at",
+          "updated_at",
+          "account",
+          "operable"
+        ]
+      },
       "AuthenticationToken": {
         "type": "object",
         "properties": {
@@ -2960,6 +3120,10 @@
     {
       "name": "Expenses",
       "description": "User budget expenses management"
+    },
+    {
+      "name": "Operations",
+      "description": "User account operations management"
     }
   ]
 }
